Fix layout issue with header cards on portrait mobile

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -135,6 +135,7 @@ header.card {
   margin: 0;
   min-height: 300px;
 }
+header.card .blurb { margin: 0; }
 header.card h1 { margin: 0 0 0.5em 0; }
 @media (min-width: 640px) {
   header.card .blurb {
@@ -284,10 +285,6 @@ header.card, section.card {
 /* Landing */
 #landing { min-height: 600px; }
 #landing h1 { margin-bottom: 0; }
-header.card .blurb {
-  margin: 0;
-  width: 65%;
-}
 @media (min-width: 640px) {
   #landing .blurb {
     text-align: right;
